--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
+language: node_js
+node_js:
+  - "lts/*"
 cache: yarn
+script: mv config.empty.js config.js && yarn build
+addons:
+  apt:
+    packages:
+      - libsecret-1-dev
