--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "fitbit": {
     "appUUID": "76cbb16a-1739-487f-9025-0d942006326d",
     "appType": "app",
-    "appDisplayName": "Spotify Controller",
+    "appDisplayName": "Spotify Ctrl",
     "iconFile": "resources/icon.png",
     "wipeColor": "#607d8b",
     "requestedPermissions": [
@@ -14,7 +14,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "Spotify Controller"
+        "name": "Spotify Ctrl"
       }
     }
   },
