--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     }
   },
   "devDependencies": {
-    "@fitbit/sdk": "^3.0.1"
+    "@fitbit/sdk": "^3.0.1",
+    "fitbit-sdk-types": "^4.1.3",
+    "io-ts": "^1.8.2",
+    "nodemon": "^1.18.10"
   },
   "dependencies": {
     "@fitbit/sdk-cli": "^1.6.0"
   },
   "scripts": {
     "build": "fitbit-build",
-    "build-and-install": "fitbit-build && fitbit-install"
+    "watch": "nodemon --exec npm run build"
+  },
+  "nodemonConfig": {
+    "ext": "ts,tsx,png,gui,css,json"
   }
 }
