--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "lts/*"
 cache: npm
-script: mv config.empty.ts config.ts && npm run build
+script: mv config.empty.ts config.ts && npm run ci
 addons:
   apt:
     packages:
