--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "@fitbit/sdk": "^3.0.1",
     "fitbit-sdk-types": "^4.1.3",
     "io-ts": "^1.8.2",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "tslint": "^5.16.0"
   },
   "dependencies": {
     "@fitbit/sdk-cli": "^1.6.0"
   },
   "scripts": {
     "build": "fitbit-build",
-    "watch": "nodemon --exec npm run build"
+    "watch": "nodemon --exec npm run build",
+    "lint": "tslint --project .",
+    "ci": "npm run build && npm run lint"
   },
   "nodemonConfig": {
     "ext": "ts,tsx,png,gui,css,json"
